First changes in structr-ui.